--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
               <div class="citrusAcana__firstSlide_Row">
                 <div class="citrusAcana__FirstSlide__ColLeft">
                   <div class="citrusAcana__imgContainer">
-                    <img class="citrusAcana__mobile_hide" src="assets/images/Lady and Dog.png" alt="" />
-                    <img class="citrusAcana__desktop_hide" src="assets/images/slide1mobile.png" alt="" />
+                    <img class="citrusAcana__mobile_hide" src="assets/images/Lady and Dog.png"
+                      alt="On the left, an image of a dog licking a girl." />
+                    <img class="citrusAcana__desktop_hide" src="assets/images/slide1mobile.png"
+                      alt="Acana logo. On the left, an image of a dog licking a girl. On the right, an image of a cat laying in the grass." />
                   </div>
                 </div>
                 <div class="citrusAcana__FirstSlide__ColMiddle">
                   <div class="citrusAcana__firstSlide__middleContainer">
                     <div class="citrusAcana__logo">
-                      <img class="citrusAcana__mobile_hide" src="assets/images/Acana Logo.png" alt="" />
+                      <img class="citrusAcana__mobile_hide" src="assets/images/Acana Logo.png" alt="Acana logo." />
                     </div>
                     <div class="citrusAcana__Middle_textContainer">
                       <h1 class="citrusAcana__firstSlideTitle">
@@ -58,7 +60,7 @@
                 </div>
                 <div class="citrusAcana__FirstSlide__ColRight">
                   <div class="citrusAcana__imgContainer">
-                    <img src="assets/images/Cat.png" alt="" />
+                    <img src="assets/images/Cat.png" alt="On the right, an image of a cat laying in the grass." />
                   </div>
                 </div>
               </div>
@@ -66,10 +68,12 @@
             <!-- End 1st slide -->
             <!-- 2nd slide -->
             <div class="citrusAcana__secondSlideContainer splide__slide">
-              <div class="citrusAcana__secondSlide_Row">
+              <div class="citrusAcana__secondSlide_Row"
+                style="background-image: url(assets/images/slider2DesktopBanner.png);background-size: 100%;background-position: center; background-repeat: no-repeat;height: 100%;">
                 <div class="citrusAcana__secondSlide__Col">
                   <div class="citrusAcana__imgContainer">
-                    <img class="citrusAcana__mobile_hide" src="assets/images/lifeStyleProductshot.png" alt="" />
+                    <img class="citrusAcana__mobile_hide" style="display:none"
+                      src="assets/images/lifeStyleProductshot.png" alt="" />
                     <img class="citrusAcana__desktop_hide" src="assets/images/slide2 mobile.png" alt="" />
                   </div>
                 </div>
@@ -120,8 +124,9 @@
                 <div class="citrusAcana__thirdSlide__col right">
                   <div class="citrusAcana__imgContainer">
                     <img class="citrusAcana__mobile_hide" src="assets/images/Ingredients Composite third slide.png"
-                      alt="" />
-                    <img class="citrusAcana__desktop_hide" src="assets/images/slide3mobile.png" alt="" />
+                      alt="Image of two bowls with two different Acana recipes." />
+                    <img class="citrusAcana__desktop_hide" src="assets/images/slide3mobile.png"
+                      alt="Image of two bowls with two different Acana recipes." />
                   </div>
                 </div>
               </div>
@@ -477,8 +482,7 @@
                             src="assets/images/tab2.7_FreshWaterFishDryDogFoodGrainFree.png" alt="" /></a>
                       </div>
                       <div class="citrus_product_info22">
-                        <p>ACANA Singles Limited Ingredient Diet Grain-Free High Protein Beef & Pumpkin Dry Dog Food, 25
-                          lbs.</p>
+                        <p>ACANA Grain-Free Freshwater Fish Whole Trout Catfish and Perch Dry Dog Food, 25 lbs.</p>
                       </div>
                       <a href="https://www.petco.com/shop/en/petcostore/product/acana-freshwater-fish-dry-dog-food" "/shop/en/petcostore"
                         manual_cm_sp="sponsoredbrandpage:acana:grainfreedrydogfood:7:freshwaterfishdrydogfoodgrainfree:product"
@@ -597,7 +601,8 @@
                             src="assets/images/tab2.13_SinglesPorkSquashDryDogFoodGrainFree.png" alt="" /></a>
                       </div>
                       <div class="citrus_product_info22">
-                        <p>NP</p>
+                        <p>ACANA Singles Limited Ingredient Diet Grain-Free High Protein Pork & Squash Dry Dog Food, 25
+                          lbs.</p>
                       </div>
                       <a href="https://www.petco.com/shop/en/petcostore/product/acana-singles-pork-and-squash-recipe-dry-dog-food" "/shop/en/petcostore"
                         manual_cm_sp="sponsoredbrandpage:acana:grainfreedrydogfood:13:singlesporksquashdrydogfoodgrainfree:product"
@@ -1393,8 +1398,10 @@
       </div>
       <div class="citrusAcana__goBeyond__card">
         <div class="citrusAcana__goBeyond__Card--img">
-          <img class="citrusAcana__mobile_hide" src="assets/images/Acana Ingredients.png" alt="">
-          <img class="citrusAcana__desktop_hide" src="assets/images/Acana Ingredients-mobile.png" alt="">
+          <img class="citrusAcana__mobile_hide" src="assets/images/Acana Ingredients.png"
+            alt="Various ingredients being prepared in a kitchen.">
+          <img class="citrusAcana__desktop_hide" src="assets/images/Acana Ingredients-mobile.png"
+            alt="Various ingredients being prepared in a kitchen.">
         </div>
         <div class="citrusAcana__goBeyond__Card--body">
           <h2>Thoughtfully crafted from start to finish</h2>
@@ -1415,21 +1422,23 @@
           <div class="citrusAcana__premium__col">
             <div class="citrusAcana__premium__card">
               <div class="citrusAcana__premium__card--img">
-                <img src="assets/images/Acana - repeat delivery.png" alt="">
+                <img src="assets/images/Acana - repeat delivery.png" alt="Bags of various Acana recipes.">
               </div>
               <div class="citrusAcana__premium__card--body">
                 <h2>Spoil your pet with Repeat Delivery</h2>
                 <p>Sign up for Repeat Delivery to help keep your pet nourished with their favorite ACANA recipe.</p>
               </div>
               <div class="citrusAcana__card--CTA">
-                <a href="#">Shop Now</a>
+                <a href="https://www.petco.com/shop/en/petcostore/brand/acana#facet:307445734561667681482101112101971163268101108105118101114121&productBeginIndex:0&orderBy:&pageView:grid&minPrice:&maxPrice:&pageSize:&"
+                  manual_cm_sp="sponsoredbrandpage:acana:premiummealsforabetterfuture:1:repeatdelivery:shopnow"
+                  onclick="clickTrackLink(this);">Shop Now</a>
               </div>
             </div>
           </div>
           <div class="citrusAcana__premium__col">
             <div class="citrusAcana__premium__card">
               <div class="citrusAcana__premium__card--img">
-                <img src="assets/images/Acana Rescue Cat.png" alt="">
+                <img src="assets/images/Acana Rescue Cat.png" alt="Image of a cat in a man’s arm.">
               </div>
               <div class="citrusAcana__premium__card--body">
                 <h2>Supporting pets in need</h2>
@@ -1461,7 +1470,8 @@
           <!-- left column -->
           <div class="citrusAcana__newPremium__col">
             <div class="citrusAcana__newPremium__leftImage">
-              <img src="assets/images/Cat and Product image.png" alt="">
+              <img src="assets/images/Cat and Product image.png"
+                alt="On the right, an image of a black cat licking their whiskers. Cans of Premium Pate in front of the cat.">
             </div>
             <div class="citrusAcana__newPremium--absoluteImg citrusAcana__mobile_hide">
               <img src="assets/images/premiumpate new logo.png" alt="">
@@ -1593,7 +1603,7 @@
     <section class="citrusAcana__perfectContainer">
       <div class="citrusAcana__perfect__row">
         <div class="citrusAcana__perfect__col">
-          <img src="assets/images/footer section life style.png" alt="">
+          <img src="assets/images/footer section life style.png" alt="Image of a dog and cat laying on a bed.">
         </div>
         <div class="citrusAcana__perfect__col">
           <div class="citrusAcana__sectionTitle">
