product scroller update

--- a/Hand-Off/index.html
+++ b/Hand-Off/index.html
@@ -313,7 +313,7 @@
         z-index: 1;
     }
 
-    .citrusPetIQ__shopProduct__row_hide_arrow .splide__arrows {
+    .cirtus_meet_tabs_main_22_hide_arrow .splide__arrows {
         display: none;
     }
 
@@ -434,7 +434,7 @@
         padding: 0;
     }
 
-    a {
+    .citrusAcana__Wrapper a {
         text-decoration: none;
         color: #000;
     }
@@ -1603,8 +1603,7 @@
                 <!--=================== tab content ===================-->
                 <div class="citrus-meet-section__tab-content">
                     <!-- start DRY DOG FOOD + GRAINS row 1  -->
-                    <div
-                        class="cirtus_meet_tabs_main_22 cirtus_meet_tabs_main_22_hide_arrow splide cirtus_meet_tabs_22">
+                    <div class="cirtus_meet_tabs_main_22 splide cirtus_meet_tabs_22">
                         <div class="splide__track">
                             <div class="splide__list">
                                 <!-- tab item -->
@@ -2740,8 +2739,7 @@
                     <!-- End FREEZE-DRIED DOG FOOD row 6  -->
 
                     <!-- start DOG TREATS row 7 -->
-                    <div
-                        class="cirtus_meet_tabs_main_22 cirtus_meet_tabs_main_22_hide_arrow splide cirtus_meet_tabs_22">
+                    <div class="cirtus_meet_tabs_main_22 splide cirtus_meet_tabs_22">
                         <div class="splide__track">
                             <div class="splide__list">
                                 <!-- tab item -->
