--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           <!--=================== tab content ===================-->
           <div class="citrus-meet-section__tab-content">
             <!-- start DRY DOG FOOD + GRAINS row 1  -->
-            <div class="cirtus_meet_tabs_main_22 cirtus_meet_tabs_main_22_hide_arrow splide cirtus_meet_tabs_22">
+            <div class="cirtus_meet_tabs_main_22 splide cirtus_meet_tabs_22">
               <div class="splide__track">
                 <div class="splide__list">
                   <!-- tab item -->
@@ -1167,7 +1167,7 @@
             <!-- End FREEZE-DRIED DOG FOOD row 6  -->
 
             <!-- start DOG TREATS row 7 -->
-            <div class="cirtus_meet_tabs_main_22 cirtus_meet_tabs_main_22_hide_arrow splide cirtus_meet_tabs_22">
+            <div class="cirtus_meet_tabs_main_22 splide cirtus_meet_tabs_22">
               <div class="splide__track">
                 <div class="splide__list">
                   <!-- tab item -->
