--- a/Hand-Off/index.html
+++ b/Hand-Off/index.html
@@ -1453,7 +1453,7 @@
                                 <div class="citrusAcana__firstSlide__middleContainer">
                                     <div class="citrusAcana__logo">
                                         <img class="citrusAcana__mobile_hide"
-                                            src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/acana Logo.png"
+                                            src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/acana_Logo"
                                             alt="Acana logo." />
                                     </div>
                                     <div class="citrusAcana__Middle_textContainer">
