slider pagination & product scrollar mobile added some tab

--- a/Hand-Off/index.html
+++ b/Hand-Off/index.html
@@ -854,7 +854,7 @@
         column-gap: 10px;
         position: absolute;
         bottom: 0px;
-        left: calc(100% / 2 - 40px);
+        left: calc(100% / 2 - 50px);
         text-align: center;
         background: rgb(189 189 189 / 80%);
         border-radius: 5px 5px 0 0;
@@ -1308,6 +1308,10 @@
 
         .citrus_meet_tab_item {
             font-size: 12px;
+        }
+
+        .cirtus_meet_tabs_main_22_hide_arrow .splide__arrows {
+            display: block;
         }
 
         /* -------------------------- */
@@ -3274,9 +3278,12 @@
                         perPage: 3,
                     },
                     1024: {
-                        perPage: 6,
+                        perPage: 4,
                     },
                     1200: {
+                        perPage: 5,
+                    },
+                    1440: {
                         perPage: 6,
                     },
                 },
