--- a/Hand-Off/index.html
+++ b/Hand-Off/index.html
@@ -872,6 +872,10 @@
         width: 100px;
     }
 
+    ul.splide__pagination>li {
+        list-style: none;
+    }
+
     ul.splide__pagination button {
         width: 19px;
         height: 19px;
@@ -1512,7 +1516,7 @@
                     <!-- 2nd slide -->
                     <div class="citrusAcana__secondSlideContainer splide__slide">
                         <div class="citrusAcana__secondSlide_Row"
-                            style="background-image: url(https://assets.petco.com/petco/image/upload/f_auto,q_auto/acana-slider2DesktopBanner.png);background-size: 100%;background-position: top; background-repeat: no-repeat;">
+                            style="background-image: url(https://assets.petco.com/petco/image/upload/f_auto,q_auto/acana-slider2DesktopBanner.png);background-size: cover;background-position: top; background-repeat: no-repeat;">
                             <div class="citrusAcana__secondSlide__Col">
                                 <div class="citrusAcana__imgContainer">
                                     <img class="citrusAcana__mobile_hide" style="display:none"
