--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <!-- 2nd slide -->
             <div class="citrusAcana__secondSlideContainer splide__slide">
               <div class="citrusAcana__secondSlide_Row"
-                style="background-image: url(assets/images/slider2DesktopBanner.png);background-size: 100%;background-position: top; background-repeat: no-repeat;">
+                style="background-image: url(assets/images/slider2DesktopBanner.png);background-size: cover;background-position: top; background-repeat: no-repeat;">
                 <div class="citrusAcana__secondSlide__Col">
                   <div class="citrusAcana__imgContainer">
                     <img class="citrusAcana__mobile_hide" style="display:none"
