3rd slide update

--- a/Hand-Off/index.html
+++ b/Hand-Off/index.html
@@ -1219,6 +1219,12 @@
     }
 
     /* responsive styling start for small devices */
+    @media all and (min-width: 1440px) {
+        .citrusAcana__thirdSlide__col.left {
+            align-items: start;
+            margin-top: 8%;
+        }
+    }
 
     @media all and (max-width: 1440px) {
         .citrusAcana__firstSlide__middleContainer {
