--- a/Hand-Off/index.html
+++ b/Hand-Off/index.html
@@ -617,10 +617,12 @@
     .citrusAcana__firstSlide__middleContainer {
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: start;
         align-items: center;
         padding: 0 20px;
         height: 400px;
+        row-gap: 20px;
+        margin-top: 5%;
     }
 
     .citrusAcana__logo {
@@ -675,7 +677,7 @@
     .citrusAcana__secondSlideContainer {
         width: 1440px;
         max-width: 100%;
-        margin: auto;
+        margin: 0;
         background: #fff;
     }
 
@@ -694,13 +696,17 @@
         justify-content: center;
     }
 
+    .citrusAcana__secondSlide__Col {
+        min-height: 170px;
+    }
+
     .citrusAcana__secondSlide__textContainer,
     .citrusAcana__thirdSlide__textContainer {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
-        row-gap: 20px;
+        row-gap: 10px;
     }
 
     .citrusAcana__logoPremium img {
@@ -1268,7 +1274,7 @@
 
         .citrusAcana__firstSlide__middleContainer {
             margin-top: 10px;
-            row-gap: 20px;
+            row-gap: 10px;
             height: auto;
         }
 
@@ -1429,6 +1435,7 @@
             padding-bottom: 41px;
             border-bottom: 20px solid #8d9b3c;
             height: auto;
+            background: #fff !important;
         }
 
         .citrusAcana__Middle_textContainer p,
@@ -1583,6 +1590,12 @@
         /* slider custom styling */
         .citrusAcana__sliderBox {
             height: auto;
+        }
+
+        .citrusAcana__firstSlideTitle,
+        .citrusAcana__secondSlide__title,
+        .citrusAcana__thirdSlide__title {
+            font-size: 28px;
         }
     }
 
